--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-uuid": "^1.0.3",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.5",
     "timeago.js": "^4.0.2",
