--- a/server/client/package.json
+++ b/server/client/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://react_video_app.vercel.app",
+  "homepage": "https://react-video-app-sigma.vercel.app",
   "name": "react_video_app",
   "version": "0.1.0",
   "private": true,
